# testprac

./: CMakelists.txt  README.md
Inferencia-Condicional-en-Distribuciones-Discretas-Binarias-main/: .gitignore
Inferencia-Condicional-en-Distribuciones-Discretas-Binarias-main/include/: chronometer.h
Inferencia-Condicional-en-Distribuciones-Discretas-Binarias-main/src/: binary_distribution.cc  interface.cc  main.cc
P01-InferenciaCondicionalEnDistribucionesDiscretasBinarias/: .gitignore  CMakeLists.txt  README.md
P01-InferenciaCondicionalEnDistribucionesDiscretasBinarias/lib/: computation-algorithms.h  input-output-functions.h
P01-InferenciaCondicionalEnDistribucionesDiscretasBinarias/src/: computation-algorithms.cc  input-output-functions.cc  main.cc
P01-InferenciaCondicionalEnDistribucionesDiscretasBinarias/test/: t-ejemplo.csv  t-sesion2.csv  t2.csv  t4.csv
include/: binary_distribution.h  interface.h
practica1/: Makefile  prueba.csv
practica1/src/: codigo.cc  codigo_original.cc  data.cc  data.h  funciones.h
prct_1/: Makefile  distribucion_detallada.txt  inference  inferencia_condicional.cc  inferencia_condicional.h  inferencia_condicional_main.cc  input2.csv  input3.csv  output.csv  output_prueba.csv  tools.cc  tools.h
src/: chronometer.cc
